fix: 보드 전체 조회 응답값 수정